--- a/templates/index.html
+++ b/templates/index.html
@@ -53,7 +53,7 @@
 <body>
     <div class="container">
         <h1>Welcome to InSTEMulate!</h1>
-        <p>Expand your knowledge and have fun with our interactive trivia game. Choose your category, difficulty level, and question type to begin the adventure.</p>
+        <p>Ignite Your Adventure and seek the knowledge in a fun way</p>
         <!-- Modify the button to submit a form to the /start route -->
         <form action="/start">
             <button type="submit" class="button">Start Playing</button>
