--- a/templates/game.html
+++ b/templates/game.html
@@ -10,6 +10,11 @@
     <link rel="stylesheet" href="/static/style.css">
 </head>
 <body>
+    <div class="audio-container">
+        <audio controls autoplay class="custom-audio">
+            <source src="/static/music/song1.mp3" type="audio/mpeg">
+        </audio>
+    </div>
     <div class="container">
         <div class="score">Score: <span id="score">0</span></div>
         <div id="question" class="question"></div>
