--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,3 @@
-<!-- landing.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,55 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome to InSTEMulate!</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <style>
-        body {
-            font-family: 'Poppins', sans-serif;
-            background-color: #f9f9f9;
-            margin: 0;
-            padding: 0;
-            color: #333;
-            line-height: 1.6;
-        }
-        .container {
-            max-width: 800px;
-            margin: 0 auto;
-            text-align: center;
-            padding: 50px 20px;
-        }
-        h1 {
-            font-size: 48px;
-            font-weight: 600;
-            color: #333;
-            margin-bottom: 20px;
-        }
-        p {
-            font-size: 18px;
-            color: #666;
-            margin-bottom: 40px;
-        }
-        .button {
-            display: inline-block;
-            padding: 15px 30px;
-            font-size: 18px;
-            border: none;
-            border-radius: 8px;
-            cursor: pointer;
-            transition: background-color 0.3s ease;
-            outline: none;
-            text-decoration: none;
-            color: #fff;
-            background-color: #6c5ce7;
-        }
-        .button:hover {
-            background-color: #4a3eb5;
-        }
-    </style>
+    <link rel="stylesheet" href="/static/index.css">
 </head>
 <body>
     <div class="container">
         <h1>Welcome to InSTEMulate!</h1>
         <p>Ignite Your Adventure and seek the knowledge in a fun way</p>
-        <!-- Modify the button to submit a form to the /start route -->
         <form action="/start">
             <button type="submit" class="button">Start Playing</button>
         </form>
