--- a/templates/landing.html
+++ b/templates/landing.html
@@ -12,10 +12,10 @@
             <a href="/start" class="logo">InSTEMulate <span></span></a>
             <ul class="menu-links">
                 <li><a href="#">Home</a></li>
-                <li><a href="#">User Stories</a></li>
                 <li><a href="/start">Demo</a></li>
-                <li><a href="https://github.com/Muffinz1/InSTEMulate/blob/main/README.md">About Us</a></li>
-                <li><a href="">Contact Us</a></li>
+                <li><a href="#">Blog</a></li>
+                <li><a href="https://github.com/Muffinz1/InSTEMulate/blob/main/README.md" target="_blank">Github</a></li>
+                <li><a href="#footer">Contact Us</a></li>
             </ul>
         </nav>
     </header>
@@ -33,6 +33,41 @@
             </form>
         </div>
     </section>
+    <footer>
+        <div class="footer-container" id="footer">
+            <div class="footer-section">
+                <h4>About Us</h4>
+                <p>Learn more about our Application and mission through our blog, discord server, Github.</p>
+            </div>
+            <div class="footer-section">
+                <h4>Quick Links</h4>
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#Mobile App">Mobile App</a></li>
+                    <li><a href="https://discord.gg/Thf3eZYd"target="_blank">Discord</a></li>
+                    <li><a href="#blog">Blog</a></li>
+                </ul>
+            </div>
+            <div class="footer-section">
+                <h4>Contact Us</h4>
+                <p> savegawugah01@gmail.com</p>
+                <p> amiryou120@gmail.com</p>
+                <p>mathewoluwashinastephen@gmail.com</p>
+            </div>
+            <div class="footer-section">
+                <h4>Follow Us</h4>
+                <div class="social-icons">
+                    <a href="https://github.com/Muffinz1/InSTEMulate" target="_blank"> <img src="static/covers/github-fill.png" alt="GitHub"></a>
+                    <a href="https://twitter.com/alx_africa"target="_blank"><img src="static/covers/twitter-x-line.png" alt="Twitter"></a>
+                    <a href=""target="_blank"><img src="static/covers/medium-fill.png" alt="Blog"></a>
+                    <a href="https://discord.gg/Thf3eZYd"target="_blank"><img src="static/covers/discord-fill.png" alt="Discord"></a>
+                </div>
+            </div>
+        </div>
+        <div class="footer-bottom">
+            <p>&copy; 2024 InSTEMulate, All rights reserved.</p>
+        </div>
+    </footer>
     <script src="indexscript.js"></script>
 </body>
 </html>
