--- a/static/start.css
+++ b/static/start.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url(/static/covers/inSTEMulate.png);
+    background-image: url(/static/covers/cover.png);
     background-size: cover;
     background-position: center;
     display: flex;
