--- a/static/start.css
+++ b/static/start.css
@@ -16,6 +16,7 @@ body {
 }
 #startButton {
     margin-top: 140px;
+    margin-right: 300px;
     padding: 15px 30px;
     font-family: 'Press Start 2P', cursive;
     font-size: 20px;
@@ -29,11 +30,16 @@ body {
     font-family: "Orbitron", sans-serif;
     font-weight: bold;
     font-size: xx-large;
+    align-items: center;
 }
 #exitButton {
+    margin-top: 140px;
+    margin-left: auto;
     padding: 15px 30px;
     font-family: 'Press Start 2P', cursive;
     font-size: 20px;
+    background-color: #dc3545;
+    color: #ffffff;
     border: none;
     border-radius: 8px;
     cursor: pointer;
@@ -42,12 +48,7 @@ body {
     font-family: "Orbitron", sans-serif;
     font-weight: bold;
     font-size: xx-large;
-
-
-}
-#exitButton {
-    background-color: #dc3545;
-    color: #fff;
+    align-items: center;
 }
 #startButton:hover,
 #exitButton:hover {
@@ -56,24 +57,13 @@ body {
 #startButton:hover {
     background-color: #0056b3;
 }
-#optionButton {
-margin-top: 140px;
-padding: 15px 30px;
-font-family: 'Press Start 2P', cursive;
-font-size: 20px;
-background-color: #000000;
-color: #ffffff;
-border: none;
-border-radius: 8px;
-cursor: pointer;
-transition: background-color 0.3s ease;
-outline: none;
-font-family: "Orbitron", sans-serif;
-font-weight: bold;
-font-size: xx-large;
-}
 
-#optionButton:hover {
-filter: brightness(85%);
-background-color: #0056b3;
+.audio-container {
+    position: fixed;
+    top: 10px;
+    right: 10px; 
+    z-index: 9999;
+}
+.custom-audio {
+    width: 250; 
 }
