--- a/templates/game.html
+++ b/templates/game.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div class="audio-container">
-        <audio controls autoplay loop class="custom-audio">
+        <audio controls autoplay loop class="custom-audio" id = "game-audio">
             <source src="/static/music/song1.mp3" type="audio/mpeg">
         </audio>
     </div>
