--- a/templates/start.html
+++ b/templates/start.html
@@ -13,15 +13,20 @@
     <link rel="stylesheet" href="/static/start.css">
 </head>
 <body>
+    <div class="audio-container">
+        <audio controls autoplay  class="custom-audio" id="audio">
+            <source src="/static/music/song3.mp3" type="audio/mpeg">
+        </audio>
+    </div>
     <div class="container">
         <button id="startButton" onclick="start()">Start</button>
-        <button id="optionButton" onclick="option()">Option</button>
         <button id="exitButton" onclick="exit()">Exit</button>
     </div>
     <script>
         function start() {
             window.location.href = '/game'; 
         }
+        document.getElementById("audio").volume = 0.5;
         function exit(){
             window.location.href= '/';
         }
