--- a/templates/start.html
+++ b/templates/start.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <div class="audio-container">
-        <audio controls autoplay  class="custom-audio" id="audio">
+        <audio controls autoplay loop class="custom-audio" id="audio">
             <source src="/static/music/song3.mp3" type="audio/mpeg">
         </audio>
     </div>
