--- a/templates/landing.html
+++ b/templates/landing.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="/static/indexstyles.css">
 </head>
 <body>
+        <!-- Header Section -->
     <header>
         <nav class="navbar">
             <a href="/start" class="logo">InSTEMulate <span></span></a>
@@ -14,25 +15,27 @@
                 <li><a href="#">Home</a></li>
                 <li><a href="/start">Demo</a></li>
                 <li><a href="#">Blog</a></li>
-                <li><a href="https://github.com/Muffinz1/InSTEMulate/blob/main/README.md" target="_blank">Github</a></li>
+                <li><a href="https://muffinz1.github.io/InSTEMulate/" target="_blank">Github</a></li>
                 <li><a href="#footer">Contact Us</a></li>
             </ul>
         </nav>
     </header>
+        <!-- Hero Section -->
     <section class="hero-section">
         <div class="content">
             <h1>Ignite your adventure</h1>
             <p>
-                InSTEMulate a trivia game that connects all of us ,
-                useful in each category and brings fun to everyone , 
-                how about spicing our learning journey with a game 
-                that makes us challenge , enjoy and always learn something new.
+                InSTEMulate is a trivia game that connects all of us,
+                is useful in each category, and brings fun to everyone.
+                Spice up your learning journey with a game that challenges,
+                entertains, and teaches you something new.
             </p>
             <form action="/start">
                 <button>Try Now</button>
             </form>
         </div>
     </section>
+        <!-- Footer Section -->
     <footer>
         <div class="footer-container" id="footer">
             <div class="footer-section">
@@ -68,6 +71,6 @@
             <p>&copy; 2024 InSTEMulate, All rights reserved.</p>
         </div>
     </footer>
-    <script src="indexscript.js"></script>
+    <script src="static/JavaScript/indexscript.js"></script>
 </body>
 </html>
