--- a/templates/game.html
+++ b/templates/game.html
@@ -21,6 +21,6 @@
         <div id="options" class="options"></div>
         <div id="finalScore"></div>
     </div>
-    <script src="/static/script.js"></script>
+    <script src="/static/JavaScript/script.js"></script>
 </body>
 </html>
