--- a/templates/landing.html
+++ b/templates/landing.html
@@ -14,8 +14,8 @@
             <ul class="menu-links">
                 <li><a href="#">Home</a></li>
                 <li><a href="/start">Demo</a></li>
-                <li><a href="#">Blog</a></li>
-                <li><a href="https://muffinz1.github.io/InSTEMulate/" target="_blank">Github</a></li>
+                <li><a href="https://docs.google.com/presentation/d/1hM0V1SGTQsPFR7t4zbnn77JXYmG7FNUDA6dlJMHhi04/edit?usp=sharing">Slides</a></li>
+                <li><a href="https://github.com/Muffinz1/InSTEMulate" target="_blank">Github</a></li>
                 <li><a href="#footer">Contact Us</a></li>
             </ul>
         </nav>
@@ -62,7 +62,7 @@
                 <div class="social-icons">
                     <a href="https://github.com/Muffinz1/InSTEMulate" target="_blank"> <img src="static/covers/github-fill.png" alt="GitHub"></a>
                     <a href="https://twitter.com/alx_africa"target="_blank"><img src="static/covers/twitter-x-line.png" alt="Twitter"></a>
-                    <a href=""target="_blank"><img src="static/covers/medium-fill.png" alt="Blog"></a>
+                    <a href="https://docs.google.com/presentation/d/1hM0V1SGTQsPFR7t4zbnn77JXYmG7FNUDA6dlJMHhi04/edit?usp=sharing"target="_blank"><img src="static/covers/medium-fill.png" alt="Blog"></a>
                     <a href="https://discord.gg/Thf3eZYd"target="_blank"><img src="static/covers/discord-fill.png" alt="Discord"></a>
                 </div>
             </div>
